--- a/output.html
+++ b/output.html
@@ -46,23 +46,23 @@ ul li {
 <br>
 <br>  	                          
 <center>			
-<a href="act1Postrero.html" target="_blank"><img src="activity 1.png" height="300px" width="300px"> </a>
+<a href="Act1Postrero.html" target="_blank"><img src="activity 1.png" height="300px" width="300px"> </a>
 
 			
-<a href="act2Postrero.html" target="_blank"> <img src="activity 2.png" height="300px" width="300px"></a>
+<a href="Act2Postrero.html" target="_blank"> <img src="activity 2.png" height="300px" width="300px"></a>
 
 			
-<a href="act3Postrero.html" target="_blank"><img src="activity 3.png" height="300px" width="300px" border="0"> </a>
+<a href="Act3Postrero.html" target="_blank"><img src="activity 3.png" height="300px" width="300px" border="0"> </a>
 
 			
 
 <a href="TouristWebsite.html" target="_blank"><img src="activity 4.png" height="300px" width="300px" border="0"></a>
 
 			
-<a href="act5Postrero.html" target="_blank"><img src="activity 5.png" height="300px" width="300px" border="0"></a>
+<a href="Act5Postrero.html" target="_blank"><img src="activity 5.png" height="300px" width="300px" border="0"></a>
 
 			
-<a href="act6Postrero.html" target="_blank"><img src="activity 6.png" height="300px" width="300px" border="0"></a>
+<a href="Act6Postrero.html" target="_blank"><img src="activity 6.png" height="300px" width="300px" border="0"></a>
 		     </center>
 	              </div>
 
