--- a/output.html
+++ b/output.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
    <title>Web System Outputs</title>
    <link rel="stylesheet" href="style.css">
@@ -46,13 +46,13 @@ ul li {
 <br>
 <br>  	                          
 <center>			
-<a href="Act1Postrero.html" target="_blank"><img src="activity 1.png" height="300px" width="300px"> </a>
+<a href="Act1Postrero.html" target="_blank"><img src="activity 1.png" height="300px" width="300px"></a>
 
 			
 <a href="Act2Postrero.html" target="_blank"> <img src="activity 2.png" height="300px" width="300px"></a>
 
 			
-<a href="Act3Postrero.html" target="_blank"><img src="activity 3.png" height="300px" width="300px" border="0"> </a>
+<a href="Act3Postrero.html" target="_blank"><img src="activity 3.png" height="300px" width="300px" border="0"></a>
 
 			
 
